<resources>
    <string name="app_name">Speedometer</string>
    <string name="title_activity_main">Start Speedometer</string>
    <string name="show_speed">Show speed</string>
    <string name="unit_switch" translatable="false"><![CDATA[MPH<>km/h]]></string>
    <string name="permission_danied">Draw over other app permission not available. Closing the application.</string>
    <string name="turn_on_gps">Turn on GPS</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="gps_dialog_title">GPS disabled</string>
    <string name="gps_not_enable">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="km_h">km/h</string>
    <string name="mph">MPH</string>
    <string name="show_stats">Show stats</string>
    <string name="title_activity_chart" translatable="false">ChartActivity</string>
    <string name="speed_label">Speed</string>
    <string name="show_widget">Show Widget</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="current_speed">Current speed</string>
    <string name="max_speed">Max. speed</string>
    <string name="avg_speed">Avg. speed</string>
</resources>
